# dsagent

./: .env.example  .gitattributes  .gitignore  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PRIVACY.md  PROJECT_CONTEXT.md  README.md  README.zh-CN.md  SECURITY.md  SESSION_HANDOFF.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/fixtures/benchmarks/t1/: fixture-set-v1.json
apps/desktop/src-tauri/nsis/: shortcut-icons.nsh
apps/desktop/src-tauri/src/: automation_commands.rs  commands.rs  main.rs
apps/desktop/src-tauri/src/kernel/: agent_context.rs  agent_run.rs  app_update.rs  attachments.rs  capability.rs  codex_bridge_contract.rs  codex_bridge_http.rs  computer_use.rs  computer_use_runtime.rs  computer_use_session.rs  connectors.rs  deepseek.rs  deepseek_pricing.rs  event_store.rs  expert_team.rs  goal_continuation.rs  goal_envelope.rs  goal_lifecycle.rs  local_directory.rs  mod.rs  models.rs  network_sandbox.rs  network_search.rs  office.rs  policy.rs  sandbox.rs  skill.rs  soul.rs  t1_powerpoint.rs  t1_reconciliation.rs  task_capability_manifest.rs  task_grouped_approval.rs  tool_runtime.rs  tool_strategy.rs  work_package.rs  workflow.rs
apps/desktop/src-tauri/src/kernel/benchmark/: mod.rs  runner.rs
apps/desktop/src-tauri/src/kernel/benchmark/t1/: baseline.rs  c4c.rs  fixtures.rs  mod.rs  verifiers.rs
apps/desktop/src-tauri/src/kernel/connectors/: landing.rs  landing_windows.rs  sync.rs
apps/desktop/src-tauri/src/kernel/event_store/: computer_use.rs  connector_draft.rs  goal_continuation.rs  grouped_approval.rs
docs/: AGENT_MODEL_BOUNDARY.md  INSTALLATION.md  OPEN_SOURCE_RELEASE.md  RELEASE_NOTES_v0.1-alpha.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.8.0-rc.1.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md
scripts/: agent-attachments.test.mjs  agent-chat-pending.test.mjs  agent-chat-run-state.test.mjs  agent-context-receipt.test.mjs  approval-visibility.test.mjs  conversation-title.test.mjs  deepseek-operations-briefing-smoke.mjs  deepseek-smoke.mjs  desktop-test.mjs  durable-computer-use-ui.test.mjs  expert-team.test.mjs  goal-envelope-ui.test.mjs  secret-scan.mjs  (+13 more)
(+116 files in other folders)
