[package]
name = "deepseek-agent-os-desktop"
version = "0.1.1"
description = "DeepSeek Agent OS desktop preview"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.6.1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.5.0", features = ["image-ico"] }
tauri-plugin-dialog = "2.7.1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging"] }
xcap = "0.9.6"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
